[project]
name = "dagster_quickstart"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.11.0",
    "dagster-dg-cli>=1.11.0",
    "dagster-webserver>=1.11.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli[local]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_quickstart"
registry_modules = [
    "dagster_quickstart.components.*",
]


